changed some styles, began working on navbar improvement, fixed some spacing issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,45 @@
 body {
     background-color: transparent;
     background-image: url("images/sandpaper.png");
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: medium;
 }
-p,
-h5 {
-    color: #484848;
-}
 h1 {
-    font-family: "Fondamento", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-family: "Fondamento", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+h3 {
+    padding: 1rem;
+}
+h5 {
+    text-align: center;
+}
+li {
+    padding-left: 3rem;
+}
+a {
+    font-weight: 450;
+    color: white;
+}
+img {
+    width: 100%;
+    height: auto; 
+}
+nav {
+    width: auto;
 }
 .nav-link:hover {
     text-decoration: underline;
 }
 .jumbotron {
-    border-radius: 0;
+    border-radius: 8px;
 }
 .container {
     background-color: white;
     font-size: larger;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    border-radius: 8px;
 }
 .page-footer {
     background-color: #8b1214;
@@ -33,7 +53,7 @@ h1 {
 }
 .blockquote {
     color: #484848;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: medium;
     font-style: italic;
     padding: 5px;
